--- a/locale/en/config.cfg
+++ b/locale/en/config.cfg
@@ -1,33 +1,45 @@
 [entity-name]
 gunship-airborne=Gunship
-cargo-plane-airborne=Cargo Plane
+cargo-plane-airborne=Cargo plane
 jet-airborne=Jet
 flying-fortress-airborne=Flying fortress
+better-cargo-plane-airborne=Better cargo plane
+even-better-cargo-plane-airborne=Even better cargo plane
 
 [entity-description]
 gunship-airborne=Recon and combat aircraft
 cargo-plane-airborne=A long-range flying chest.
 jet-airborne=For when you need to get somewhere FAST.
 flying-fortress-airborne=The ultimate in aerial superiority.
+better-cargo-plane-airborne=
+even-better-cargo-plane-airborne=
 
 [mod-setting-name]
 aircraft-realism-turn-radius=Realistic turn radius
 aircraft-realism-acceleration=Realistic acceleration
 aircraft-realism-braking-speed=Realistic braking force
 aircraft-realism-takeoff-health=Realistic takeoff/landing plane damage
+aircraft-realism-no-aerial-shadows=Realistic shadows
 
 aircraft-realism-environmental-impact=Realistic environmental impacts
 aircraft-emit-pollution=Planes emit pollution
 aircraft-pollution-amount=Emitted pollution amount
 
-aircraft-takeoff-speed-dropship=Dropship takeoff speed ---
+aircraft-takeoff-speed-gunship=Gunship takeoff speed ---
 aircraft-takeoff-speed-cargo-plane=Cargo plane takeoff speed
 aircraft-takeoff-speed-jet=Jet takeoff speed
 aircraft-takeoff-speed-flying-fortress=Flying fortress takeoff speed
-aircraft-landing-speed-dropship=Dropship landing speed ---
+
+aircraft-takeoff-speed-better-cargo-plane=Better cargo plane takeoff speed
+aircraft-takeoff-speed-even-better-cargo-plane=Even better cargo plane takeoff speed
+
+aircraft-landing-speed-gunship=Gunship landing speed ---
 aircraft-landing-speed-cargo-plane=Cargo plane landing speed
 aircraft-landing-speed-jet=Jet landing speed
 aircraft-landing-speed-flying-fortress=Flying fortress landing speed
+
+aircraft-landing-speed-better-cargo-plane=Better cargo plane landing speed
+aircraft-landing-speed-even-better-cargo-plane=Even better cargo plane landing speed
 
 aircraft-speed-unit=Speed unit
 
@@ -36,19 +48,26 @@ aircraft-realism-turn-radius=Widens the turn radius of the planes
 aircraft-realism-acceleration=Decreases the acceleration of planes for longer needed takeoff distance
 aircraft-realism-braking-speed=Reduces the braking force, increasing the braking distance
 aircraft-realism-takeoff-health=Realistic plane damage hitting objects on takeoff / landing
+aircraft-realism-no-aerial-shadows=Airborne planes will have no shadows to show the illusion of being off the ground (NOT available on all planes!)
 
 aircraft-realism-environmental-impact=Impacts with cliffs will destroy the plane instead of stopping it
 aircraft-emit-pollution=Planes emit pollution while someone is sitting in it
 aircraft-pollution-amount=How much pollution to emit while someone is sitting in it, this is multiplied by the speed of the plane
 
-aircraft-takeoff-speed-dropship=Speed to takeoff and be airborne, no longer colliding with anything (Should be greater than the landing speed)
+aircraft-takeoff-speed-gunship=Speed to takeoff and be airborne, no longer colliding with anything (Should be greater than the landing speed)
 aircraft-takeoff-speed-cargo-plane=Speed to takeoff and be airborne, no longer colliding with anything (Should be greater than the landing speed)
 aircraft-takeoff-speed-jet=Speed to takeoff and be airborne, no longer colliding with anything (Should be greater than the landing speed)
 aircraft-takeoff-speed-flying-fortress=Speed to takeoff and be airborne, no longer colliding with anything (Should be greater than the landing speed)
-aircraft-landing-speed-dropship=Speed to land, no longer airborne and has collision with other objects (Should be less than the takeoff speed)
+aircraft-takeoff-speed-better-cargo-plane=Speed to takeoff and be airborne, no longer colliding with anything (Should be greater than the landing speed)
+aircraft-takeoff-speed-even-better-cargo-plane=Speed to takeoff and be airborne, no longer colliding with anything (Should be greater than the landing speed)
+
+aircraft-landing-speed-gunship=Speed to land, no longer airborne and has collision with other objects (Should be less than the takeoff speed)
 aircraft-landing-speed-cargo-plane=Speed to land, no longer airborne and has collision with other objects (Should be less than the takeoff speed)
 aircraft-landing-speed-jet=Speed to land, no longer airborne and has collision with other objects (Should be less than the takeoff speed)
 aircraft-landing-speed-flying-fortress=Speed to land, no longer airborne and has collision with other objects (Should be less than the takeoff speed)
+aircraft-landing-speed-better-cargo-plane=Speed to land, no longer airborne and has collision with other objects (Should be less than the takeoff speed)
+aircraft-landing-speed-even-better-cargo-plane=Speed to land, no longer airborne and has collision with other objects (Should be less than the takeoff speed)
+
 
 aircraft-speed-unit=Whether the units are in metric (km/h) or imperial units (mph)
 
