Buffed flying fortress If a passenger is in a plane when the driver bails, the passenger becomes the driver Fixed realism acceleration not doing anything Fixed planes blowing up when stationary over water

--- a/locale/en/config.cfg
+++ b/locale/en/config.cfg
@@ -3,16 +3,16 @@ gunship-airborne=Gunship
 cargo-plane-airborne=Cargo plane
 jet-airborne=Jet
 flying-fortress-airborne=Flying fortress
-better-cargo-plane-airborne=Better cargo plane
-even-better-cargo-plane-airborne=Even better cargo plane
+better-cargo-plane-airborne=Better Cargo Plane
+even-better-cargo-plane-airborne=Even Better Cargo Plane
 
 [entity-description]
 gunship-airborne=Recon and combat aircraft
 cargo-plane-airborne=A long-range flying chest.
 jet-airborne=For when you need to get somewhere FAST.
 flying-fortress-airborne=The ultimate in aerial superiority.
-better-cargo-plane-airborne=
-even-better-cargo-plane-airborne=
+better-cargo-plane-airborne=A better, longer-range, flying chest.
+even-better-cargo-plane-airborne=An even better, even longer-range flying chest.
 
 [mod-setting-name]
 aircraft-realism-turn-radius=Realistic turn radius
@@ -50,9 +50,9 @@ aircraft-realism-braking-speed=Reduces the braking force, increasing the braking
 aircraft-realism-takeoff-health=Realistic plane damage hitting objects on takeoff / landing
 aircraft-realism-no-aerial-shadows=Airborne planes will have no shadows to show the illusion of being off the ground (NOT available on all planes!)
 
-aircraft-realism-environmental-impact=Impacts with cliffs will destroy the plane instead of stopping it
+aircraft-realism-environmental-impact=Impacts with cliffs and water will destroy the plane instead of stopping it
 aircraft-emit-pollution=Planes emit pollution while someone is sitting in it
-aircraft-pollution-amount=How much pollution to emit while someone is sitting in it, this is multiplied by the speed of the plane
+aircraft-pollution-amount=How much pollution to emit while someone is sitting in it, this is multiplied by the speed and fuel of the plane
 
 aircraft-takeoff-speed-gunship=Speed to takeoff and be airborne, no longer colliding with anything (Should be greater than the landing speed)
 aircraft-takeoff-speed-cargo-plane=Speed to takeoff and be airborne, no longer colliding with anything (Should be greater than the landing speed)
