Improved accuracy of environmental obstacle detection

--- a/locale/en/config.cfg
+++ b/locale/en/config.cfg
@@ -21,6 +21,8 @@ aircraft-realism-braking-speed=Realistic braking force
 aircraft-realism-takeoff-health=Realistic takeoff/landing plane damage
 aircraft-realism-no-aerial-shadows=Realistic shadows
 
+aircraft-realism-strict-runway-checking=Strict runway requirement
+aircraft-realism-strict-runway-checking-maximum-tile-vehicle-friction=Runway tile max vehicle friction modifier
 aircraft-realism-environmental-impact=Realistic environmental impacts
 aircraft-emit-pollution=Planes emit pollution
 aircraft-pollution-amount=Emitted pollution amount
@@ -50,6 +52,8 @@ aircraft-realism-braking-speed=Reduces the braking force, increasing the braking
 aircraft-realism-takeoff-health=Realistic plane damage hitting objects on takeoff / landing
 aircraft-realism-no-aerial-shadows=Airborne planes will have no shadows to show the illusion of being off the ground (NOT available on all planes!)
 
+aircraft-realism-strict-runway-checking=Planes must takeoff and land from tiles with a vehicle friction modifier less than or equal to the max vehicle friction modifier set below \n Otherwise the plane will not accelerate past the max taxi speed and take damage
+aircraft-realism-strict-runway-checking-maximum-tile-vehicle-friction=If strict runway requirement is enabled, planes must takeoff from tiles with a vehicle friction modifier less than or equal to what is set here
 aircraft-realism-environmental-impact=Impacts with cliffs and water will destroy the plane instead of stopping it
 aircraft-emit-pollution=Planes emit pollution while someone is sitting in it
 aircraft-pollution-amount=How much pollution to emit while someone is sitting in it, this is multiplied by the speed and fuel of the plane
