Added strict runway checking

--- a/locale/en/config.cfg
+++ b/locale/en/config.cfg
@@ -23,6 +23,8 @@ aircraft-realism-no-aerial-shadows=Realistic shadows
 
 aircraft-realism-strict-runway-checking=Strict runway requirement
 aircraft-realism-strict-runway-checking-maximum-tile-vehicle-friction=Runway tile max vehicle friction modifier
+aircraft-realism-strict-runway-max-taxi-speed=Strict runway max taxi speed
+
 aircraft-realism-environmental-impact=Realistic environmental impacts
 aircraft-emit-pollution=Planes emit pollution
 aircraft-pollution-amount=Emitted pollution amount
@@ -54,7 +56,9 @@ aircraft-realism-no-aerial-shadows=Airborne planes will have no shadows to show 
 
 aircraft-realism-strict-runway-checking=Planes must takeoff and land from tiles with a vehicle friction modifier less than or equal to the max vehicle friction modifier set below \n Otherwise the plane will not accelerate past the max taxi speed and take damage
 aircraft-realism-strict-runway-checking-maximum-tile-vehicle-friction=If strict runway requirement is enabled, planes must takeoff from tiles with a vehicle friction modifier less than or equal to what is set here
-aircraft-realism-environmental-impact=Impacts with cliffs and water will destroy the plane instead of stopping it
+aircraft-realism-strict-runway-max-taxi-speed=The max speed planes can travel at when not on a runway, exceeding this will deal damage to the plane
+
+aircraft-realism-environmental-impact=Impacts with cliffs and water over 40km/h will destroy the plane instead of stopping it
 aircraft-emit-pollution=Planes emit pollution while someone is sitting in it
 aircraft-pollution-amount=How much pollution to emit while someone is sitting in it, this is multiplied by the speed and fuel of the plane
 
