--- a/locale/en/config.cfg
+++ b/locale/en/config.cfg
@@ -20,6 +20,8 @@ aircraft-realism-acceleration=Realistic acceleration
 aircraft-realism-braking-speed=Realistic braking force
 aircraft-realism-takeoff-health=Realistic takeoff/landing plane damage
 aircraft-realism-no-aerial-shadows=Realistic shadows
+aircraft-realism-fuel-usage-multiplier-grounded=Fuel usage multiplier (grounded)
+aircraft-realism-fuel-usage-multiplier-airborne=Fuel usage multiplier (airborne)
 
 aircraft-realism-strict-runway-checking=Strict runway requirement
 aircraft-realism-strict-runway-checking-maximum-tile-vehicle-friction=Runway tile max vehicle friction modifier
@@ -53,6 +55,8 @@ aircraft-realism-acceleration=Decreases the acceleration of planes for longer ne
 aircraft-realism-braking-speed=Reduces the braking force, increasing the braking distance
 aircraft-realism-takeoff-health=Realistic plane damage hitting objects on takeoff / landing
 aircraft-realism-no-aerial-shadows=Airborne planes will have no shadows to show the illusion of being off the ground (NOT available on all planes!)
+aircraft-realism-fuel-usage-multiplier-grounded=How much to multiply fuel usage of grounded planes
+aircraft-realism-fuel-usage-multiplier-airborne=How much to multiply fuel usage of airborne planes
 
 aircraft-realism-strict-runway-checking=Planes must takeoff and land from tiles with a vehicle friction modifier less than or equal to the max vehicle friction modifier set below \n Otherwise the plane will not accelerate past the max taxi speed and take damage
 aircraft-realism-strict-runway-checking-maximum-tile-vehicle-friction=If strict runway requirement is enabled, planes must takeoff from tiles with a vehicle friction modifier less than or equal to what is set here
