Added settings configuration for gauges

--- a/locale/en/config.cfg
+++ b/locale/en/config.cfg
@@ -49,6 +49,9 @@ aircraft-landing-speed-even-better-cargo-plane=Even better cargo plane landing s
 
 aircraft-speed-unit=Speed unit
 
+aircraft-realism-user-enable-gauges=Enable gauges
+aircraft-realism-user-low-fuel-warning-percentage=Low fuel warning percentage
+
 [mod-setting-description]
 aircraft-realism-turn-radius=Widens the turn radius of the planes
 aircraft-realism-acceleration=Decreases the acceleration of planes for longer needed takeoff distance
@@ -80,8 +83,10 @@ aircraft-landing-speed-flying-fortress=Speed to land, no longer airborne and has
 aircraft-landing-speed-better-cargo-plane=Speed to land, no longer airborne and has collision with other objects (Should be less than the takeoff speed)
 aircraft-landing-speed-even-better-cargo-plane=Speed to land, no longer airborne and has collision with other objects (Should be less than the takeoff speed)
 
-
 aircraft-speed-unit=Whether the units are in metric (km/h) or imperial units (mph)
+
+aircraft-realism-user-enable-gauges=Show speed and fuel gauges in upper left corner of the screen after entering a plane
+aircraft-realism-user-low-fuel-warning-percentage=Percentage of max fuel to turn on warning lights in fuel gauge
 
 [string-mod-setting]
 aircraft-speed-unit-metric=Metric
