Fixed measurement conversions between metric and imperial

--- a/locale/en/config.cfg
+++ b/locale/en/config.cfg
@@ -51,6 +51,7 @@ aircraft-speed-unit=Speed unit
 
 aircraft-realism-user-enable-gauges=Enable gauges
 aircraft-realism-user-low-fuel-warning-percentage=Low fuel warning percentage
+aircraft-realism-user-speed-unit=Gauge speed unit
 
 [mod-setting-description]
 aircraft-realism-turn-radius=Widens the turn radius of the planes
@@ -87,7 +88,10 @@ aircraft-speed-unit=Whether the units are in metric (km/h) or imperial units (mp
 
 aircraft-realism-user-enable-gauges=Show speed and fuel gauges in upper left corner of the screen after entering a plane
 aircraft-realism-user-low-fuel-warning-percentage=Percentage of max fuel to turn on warning lights in fuel gauge
+aircraft-realism-user-speed-unit=Whether the gauge displays speed in metric (km/h) or imperial units (mph)
 
 [string-mod-setting]
 aircraft-speed-unit-metric=Metric
 aircraft-speed-unit-imperial=Imperial
+aircraft-realism-user-speed-unit-metric=Metric
+aircraft-realism-user-speed-unit-imperial=Imperial
