Multiplayer bug fixes and settings tweaks - Hopping out of a moving aircraft as a passenger no longer destroys the plane - If pilot hops out of a moving aircraft, passenger becomes the pilot - Changed mod config option names for clarity - Increased braking force of cargo plane - Lowered severity of impacts with "Increased ground collision damage" enabled

--- a/locale/en/config.cfg
+++ b/locale/en/config.cfg
@@ -18,8 +18,8 @@ even-better-cargo-plane-airborne=An even better, even longer-range flying chest.
 aircraft-realism-turn-radius=Realistic turn radius
 aircraft-realism-acceleration=Realistic acceleration
 aircraft-realism-braking-speed=Realistic braking force
-aircraft-realism-takeoff-health=Realistic takeoff/landing plane damage
-aircraft-realism-no-aerial-shadows=Realistic shadows
+aircraft-realism-takeoff-health=Increased ground collision damage
+aircraft-realism-no-aerial-shadows=Plane shadows
 aircraft-realism-fuel-usage-multiplier-grounded=Fuel usage multiplier (grounded)
 aircraft-realism-fuel-usage-multiplier-airborne=Fuel usage multiplier (airborne)
 
@@ -27,7 +27,7 @@ aircraft-realism-strict-runway-checking=Strict runway requirement
 aircraft-realism-strict-runway-checking-maximum-tile-vehicle-friction=Runway tile max vehicle friction modifier
 aircraft-realism-strict-runway-max-taxi-speed=Strict runway max taxi speed
 
-aircraft-realism-environmental-impact=Realistic environmental impacts
+aircraft-realism-environmental-impact=Deadly environmental impacts
 aircraft-emit-pollution=Planes emit pollution
 aircraft-pollution-amount=Emitted pollution amount
 
@@ -57,8 +57,8 @@ aircraft-realism-user-speed-unit=Gauge speed unit
 aircraft-realism-turn-radius=Widens the turn radius of the planes
 aircraft-realism-acceleration=Decreases the acceleration of planes for longer needed takeoff distance
 aircraft-realism-braking-speed=Reduces the braking force, increasing the braking distance
-aircraft-realism-takeoff-health=Realistic plane damage hitting objects on takeoff / landing
-aircraft-realism-no-aerial-shadows=Airborne planes will have no shadows to show the illusion of being off the ground (NOT available on all planes!)
+aircraft-realism-takeoff-health=Increased plane damage hitting objects (rocks, trees, ...) on takeoff / landing
+aircraft-realism-no-aerial-shadows=Airborne planes will have no shadows to show the illusion of being off the ground (NOT available on all planes)
 aircraft-realism-fuel-usage-multiplier-grounded=How much to multiply fuel usage of grounded planes
 aircraft-realism-fuel-usage-multiplier-airborne=How much to multiply fuel usage of airborne planes
 
@@ -68,7 +68,7 @@ aircraft-realism-strict-runway-max-taxi-speed=The max speed planes can travel at
 
 aircraft-realism-environmental-impact=Impacts with cliffs and water over 40km/h will destroy the plane instead of stopping it
 aircraft-emit-pollution=Planes emit pollution while someone is sitting in it
-aircraft-pollution-amount=How much pollution to emit while someone is sitting in it, this is multiplied by the speed and fuel of the plane
+aircraft-pollution-amount=How much pollution to emit while someone is sitting in it, multiplied by the speed and fuel type of the plane
 
 aircraft-takeoff-speed-gunship=Speed to takeoff and be airborne, no longer colliding with anything (Should be greater than the landing speed)
 aircraft-takeoff-speed-cargo-plane=Speed to takeoff and be airborne, no longer colliding with anything (Should be greater than the landing speed)
