--- a/locale/en/config.cfg
+++ b/locale/en/config.cfg
@@ -52,6 +52,8 @@ aircraft-speed-unit=Speed unit
 aircraft-realism-user-enable-gauges=Enable gauges
 aircraft-realism-user-low-fuel-warning-percentage=Low fuel warning percentage
 aircraft-realism-user-speed-unit=Gauge speed unit
+aircraft-realism-sounds-enabled=Enable sounds
+aircraft-realism-auto-accelerate-on-landing-speed-no-brake=Auto reaccelerate to keep airborne
 
 [mod-setting-description]
 aircraft-realism-turn-radius=Widens the turn radius of the planes
@@ -89,6 +91,8 @@ aircraft-speed-unit=Whether the units are in metric (km/h) or imperial units (mp
 aircraft-realism-user-enable-gauges=Show speed and fuel gauges in upper left corner of the screen after entering a plane
 aircraft-realism-user-low-fuel-warning-percentage=Percentage of max fuel to turn on warning lights in fuel gauge
 aircraft-realism-user-speed-unit=Whether the gauge displays speed in metric (km/h) or imperial units (mph)
+aircraft-realism-sounds-enabled=If disabled, Aircraft Realism will not play any sounds
+aircraft-realism-auto-accelerate-on-landing-speed-no-brake=If enabled, upon nearing the landing speed if you are not braking the plane, the plane will auto reaccelerate to keep you airborne
 
 [string-mod-setting]
 aircraft-speed-unit-metric=Metric
