Add no aerial shadow setting to API - Updated localized name for no-aerial-shadows

--- a/locale/en/config.cfg
+++ b/locale/en/config.cfg
@@ -19,7 +19,7 @@ aircraft-realism-turn-radius=Realistic turn radius
 aircraft-realism-acceleration=Realistic acceleration
 aircraft-realism-braking-speed=Realistic braking force
 aircraft-realism-takeoff-health=Increased ground collision damage
-aircraft-realism-no-aerial-shadows=Plane shadows
+aircraft-realism-no-aerial-shadows=No airborne plane shadows
 aircraft-realism-fuel-usage-multiplier-grounded=Fuel usage multiplier (grounded)
 aircraft-realism-fuel-usage-multiplier-airborne=Fuel usage multiplier (airborne)
 
