Fixed the strings

--- a/locale/de/config.cfg
+++ b/locale/de/config.cfg
@@ -19,7 +19,7 @@ aircraft-realism-turn-radius=Realistischer Wenderadius
 aircraft-realism-acceleration=Realistische Beschleunigung
 aircraft-realism-braking-speed=Realistische Bremskraft
 aircraft-realism-takeoff-health=Erhöhter Bodenkollisionsschaden
-aircraft-realism-no-aerial-shadows=Flugzeugschatten
+aircraft-realism-no-aerial-shadows=Keine Flugzeugschatten
 aircraft-realism-fuel-usage-multiplier-grounded=Kraftstoffverbrauchsmultiplikator (Boden)
 aircraft-realism-fuel-usage-multiplier-airborne=Kraftstoffverbrauchsmultiplikator (Luft)
 aircraft-realism-strict-runway-checking=Zwingende Rollbahn Vorhandenheit
@@ -29,17 +29,17 @@ aircraft-realism-environmental-impact=Tödliche Zusammenstöße mit der Umwelt.
 aircraft-emit-pollution=Flugzeuge geben Umweltverschmutzung ab
 aircraft-pollution-amount=Menge der abgegebenen Umweltverschmutzung
 aircraft-takeoff-speed-gunship=Kanonenboot Startgeschwindigkeit ---
-aircraft-takeoff-speed-cargo-plane=Frachtflugzeug Startgeschwindigkeit ---
-aircraft-takeoff-speed-jet=Jet Startgeschwindigkeit ---
-aircraft-takeoff-speed-flying-fortress=Fliegende Festung Startgeschwindigkeit ---
-aircraft-takeoff-speed-better-cargo-plane=Besseres Frachtflugzeug Startgeschwindigkeit ---
-aircraft-takeoff-speed-even-better-cargo-plane=Noch besseres Frachtflugzeug Startgeschwindigkeit ---
+aircraft-takeoff-speed-cargo-plane=Frachtflugzeug Startgeschwindigkeit
+aircraft-takeoff-speed-jet=Jet Startgeschwindigkeit
+aircraft-takeoff-speed-flying-fortress=Fliegende Festung Startgeschwindigkeit
+aircraft-takeoff-speed-better-cargo-plane=Besseres Frachtflugzeug Startgeschwindigkeit
+aircraft-takeoff-speed-even-better-cargo-plane=Noch besseres Frachtflugzeug Startgeschwindigkeit
 aircraft-landing-speed-gunship=Kanonenboot Landegeschwindigkeit ---
-aircraft-landing-speed-cargo-plane=Frachtflugzeug Landegeschwindigkeit ---
-aircraft-landing-speed-jet=Jet Landegeschwindigkeit ---
-aircraft-landing-speed-flying-fortress=Fliegende Festung Landegeschwindigkeit ---
-aircraft-landing-speed-better-cargo-plane=Besseres Frachtflugzeug Landegeschwindigkeit ---
-aircraft-landing-speed-even-better-cargo-plane=Noch besseres Frachtflugzeug Landegeschwindigkeit ---
+aircraft-landing-speed-cargo-plane=Frachtflugzeug Landegeschwindigkeit
+aircraft-landing-speed-jet=Jet Landegeschwindigkeit
+aircraft-landing-speed-flying-fortress=Fliegende Festung Landegeschwindigkeit
+aircraft-landing-speed-better-cargo-plane=Besseres Frachtflugzeug Landegeschwindigkeit
+aircraft-landing-speed-even-better-cargo-plane=Noch besseres Frachtflugzeug Landegeschwindigkeit
 aircraft-speed-unit=Geschwindigkeitseinheit
 aircraft-realism-user-enable-gauges=Bordanzeigen aktivieren
 aircraft-realism-user-low-fuel-warning-percentage=Prozentsatz zur Warnung bei niedrigem Kraftstoff
