Add aircraft takeoff distance indicator
TODO:
- Calculation does not account for afterburner

--- a/locale/de/config.cfg
+++ b/locale/de/config.cfg
@@ -14,6 +14,9 @@ flying-fortress-airborne=Der ultimative Luftüberlegenheitsflieger.
 better-cargo-plane-airborne=Ein bessere fliegende Langstrecken-Truhe.
 even-better-cargo-plane-airborne=Ein noch bessere fliegende Langstrecken-Truhe.
 
+[shortcut-name]
+aircraft-realism-show-takeoff-distance=Startentfernung des Flugzeugs anzeigen
+
 [mod-setting-name]
 aircraft-realism-turn-radius=Realistischer Wenderadius
 aircraft-realism-acceleration=Realistische Beschleunigung
