--- a/locale/en/config.cfg
+++ b/locale/en/config.cfg
@@ -14,6 +14,9 @@ flying-fortress-airborne=The ultimate in aerial superiority.
 better-cargo-plane-airborne=A better, longer-range, flying chest.
 even-better-cargo-plane-airborne=An even better, even longer-range flying chest.
 
+[shortcut-name]
+aircraft-realism-show-takeoff-distance=Show aircraft takeoff distance
+
 [mod-setting-name]
 aircraft-realism-turn-radius=Realistic turn radius
 aircraft-realism-acceleration=Realistic acceleration
