Replace takeoff/landing speed with single transition speed
Having two separate speeds prevents the takeoff animations from lining up
together. It also removes the possibility for error if landing speed is set
above takeoff speed and reduces the number of settings for users to configure
(maybe good?)

For backwards compatibility, the setting is still called
aircraft-takeoff-speed-[plane-name].

--- a/Docs/FlyingCar_0.1.0/locale/en/config.cfg
+++ b/Docs/FlyingCar_0.1.0/locale/en/config.cfg
@@ -8,8 +8,6 @@ car-airborne=Car which flies
 
 [mod-setting-name]
 aircraft-takeoff-speed-car=Takeoff speed
-aircraft-landing-speed-car=Landing speed
 
 [mod-setting-description]
-aircraft-takeoff-speed-car=Speed to takeoff and be airborne, no longer colliding with anything (Should be greater than the landing speed)
-aircraft-landing-speed-car=Speed to land, no longer airborne and has collision with other objects (Should be less than the takeoff speed)
+aircraft-takeoff-speed-car=Speed to takeoff and be airborne, no longer colliding with anything
