--- a/locale/de/config.cfg
+++ b/locale/de/config.cfg
@@ -37,12 +37,6 @@ aircraft-takeoff-speed-jet=Jet Startgeschwindigkeit
 aircraft-takeoff-speed-flying-fortress=Fliegende Festung Startgeschwindigkeit
 aircraft-takeoff-speed-better-cargo-plane=Besseres Frachtflugzeug Startgeschwindigkeit
 aircraft-takeoff-speed-even-better-cargo-plane=Noch besseres Frachtflugzeug Startgeschwindigkeit
-aircraft-landing-speed-gunship=Kanonenboot Landegeschwindigkeit ---
-aircraft-landing-speed-cargo-plane=Frachtflugzeug Landegeschwindigkeit
-aircraft-landing-speed-jet=Jet Landegeschwindigkeit
-aircraft-landing-speed-flying-fortress=Fliegende Festung Landegeschwindigkeit
-aircraft-landing-speed-better-cargo-plane=Besseres Frachtflugzeug Landegeschwindigkeit
-aircraft-landing-speed-even-better-cargo-plane=Noch besseres Frachtflugzeug Landegeschwindigkeit
 aircraft-speed-unit=Geschwindigkeitseinheit
 aircraft-realism-user-enable-gauges=Bordanzeigen aktivieren
 aircraft-realism-user-low-fuel-warning-percentage=Prozentsatz zur Warnung bei niedrigem Kraftstoff
@@ -64,18 +58,12 @@ aircraft-realism-strict-runway-max-taxi-speed=Die Maximalgeschwindigkeit, mit de
 aircraft-realism-environmental-impact=Aufprall auf Klippen oder Wasser bei über 40 km/h wird das Flugzeug zerstören, anstatt es zu stoppen.
 aircraft-emit-pollution=Flugzeuge geben Umweltverschmutzung ab, wenn sich jemand darin befindet.
 aircraft-pollution-amount=Wieviel Umweltverschmutzung abgegeben wird, wenn jemand darin sitzt, multipliziert mit der Geschwindigkeit und dem Kraftstofftyp des Flugzeugs.
-aircraft-takeoff-speed-gunship=Geschwindigkeit zum Abheben, und keine Kollision mehr zu haben (sollte höher als die Landegeschwindigkeit sein).
-aircraft-takeoff-speed-cargo-plane=Geschwindigkeit zum Abheben, und keine Kollision mehr zu haben (sollte höher als die Landegeschwindigkeit sein).
-aircraft-takeoff-speed-jet=Geschwindigkeit zum Abheben, und keine Kollision mehr zu haben (sollte höher als die Landegeschwindigkeit sein).
-aircraft-takeoff-speed-flying-fortress=Geschwindigkeit zum Abheben, und keine Kollision mehr zu haben (sollte höher als die Landegeschwindigkeit sein).
-aircraft-takeoff-speed-better-cargo-plane=Geschwindigkeit zum Abheben, und keine Kollision mehr zu haben (sollte höher als die Landegeschwindigkeit sein).
-aircraft-takeoff-speed-even-better-cargo-plane=Geschwindigkeit zum Abheben, und keine Kollision mehr zu haben (sollte höher als die Landegeschwindigkeit sein).
-aircraft-landing-speed-gunship=Geschwindigkeit zum Landen, und wieder Kollision zu haben (sollte geringer als die Startgeschwindigkeit sein).
-aircraft-landing-speed-cargo-plane=Geschwindigkeit zum Landen, und wieder Kollision zu haben (sollte geringer als die Startgeschwindigkeit sein).
-aircraft-landing-speed-jet=Geschwindigkeit zum Landen, und wieder Kollision zu haben (sollte geringer als die Startgeschwindigkeit sein).
-aircraft-landing-speed-flying-fortress=Geschwindigkeit zum Landen, und wieder Kollision zu haben (sollte geringer als die Startgeschwindigkeit sein).
-aircraft-landing-speed-better-cargo-plane=Geschwindigkeit zum Landen, und wieder Kollision zu haben (sollte geringer als die Startgeschwindigkeit sein).
-aircraft-landing-speed-even-better-cargo-plane=Geschwindigkeit zum Landen, und wieder Kollision zu haben (sollte geringer als die Startgeschwindigkeit sein).
+aircraft-takeoff-speed-gunship=Geschwindigkeit zum Abheben, und keine Kollision mehr zu haben
+aircraft-takeoff-speed-cargo-plane=Geschwindigkeit zum Abheben, und keine Kollision mehr zu haben
+aircraft-takeoff-speed-jet=Geschwindigkeit zum Abheben, und keine Kollision mehr zu haben
+aircraft-takeoff-speed-flying-fortress=Geschwindigkeit zum Abheben, und keine Kollision mehr zu haben
+aircraft-takeoff-speed-better-cargo-plane=Geschwindigkeit zum Abheben, und keine Kollision mehr zu haben
+aircraft-takeoff-speed-even-better-cargo-plane=Geschwindigkeit zum Abheben, und keine Kollision mehr zu haben
 aircraft-speed-unit=Metrisches (km/h) oder Imperiales (mph) System.
 aircraft-realism-user-enable-gauges=Geschwindigkeits- und Kraftstoffanzeigen in der oberen linken Ecke des Bildschirms anzeigen, wenn man sich in einem Flugzeug befindet.
 aircraft-realism-user-low-fuel-warning-percentage=Prozentsatz der maximalen Kraftstoffmenge, um die Warnleuchten in der Kraftstoffanzeige einzuschalten.
