--- a/locale/en/config.cfg
+++ b/locale/en/config.cfg
@@ -34,21 +34,13 @@ aircraft-realism-environmental-impact=Deadly environmental impacts
 aircraft-emit-pollution=Planes emit pollution
 aircraft-pollution-amount=Emitted pollution amount
 
-aircraft-takeoff-speed-gunship=Gunship takeoff speed ---
+aircraft-takeoff-speed-gunship=Gunship takeoff speed
 aircraft-takeoff-speed-cargo-plane=Cargo plane takeoff speed
 aircraft-takeoff-speed-jet=Jet takeoff speed
 aircraft-takeoff-speed-flying-fortress=Flying fortress takeoff speed
 
 aircraft-takeoff-speed-better-cargo-plane=Better cargo plane takeoff speed
 aircraft-takeoff-speed-even-better-cargo-plane=Even better cargo plane takeoff speed
-
-aircraft-landing-speed-gunship=Gunship landing speed ---
-aircraft-landing-speed-cargo-plane=Cargo plane landing speed
-aircraft-landing-speed-jet=Jet landing speed
-aircraft-landing-speed-flying-fortress=Flying fortress landing speed
-
-aircraft-landing-speed-better-cargo-plane=Better cargo plane landing speed
-aircraft-landing-speed-even-better-cargo-plane=Even better cargo plane landing speed
 
 aircraft-speed-unit=Speed unit
 
@@ -75,19 +67,12 @@ aircraft-realism-environmental-impact=Impacts with cliffs and water over 40km/h 
 aircraft-emit-pollution=Planes emit pollution while someone is sitting in it
 aircraft-pollution-amount=How much pollution to emit while someone is sitting in it, multiplied by the speed and fuel type of the plane
 
-aircraft-takeoff-speed-gunship=Speed to takeoff and be airborne, no longer colliding with anything (Should be greater than the landing speed)
-aircraft-takeoff-speed-cargo-plane=Speed to takeoff and be airborne, no longer colliding with anything (Should be greater than the landing speed)
-aircraft-takeoff-speed-jet=Speed to takeoff and be airborne, no longer colliding with anything (Should be greater than the landing speed)
-aircraft-takeoff-speed-flying-fortress=Speed to takeoff and be airborne, no longer colliding with anything (Should be greater than the landing speed)
-aircraft-takeoff-speed-better-cargo-plane=Speed to takeoff and be airborne, no longer colliding with anything (Should be greater than the landing speed)
-aircraft-takeoff-speed-even-better-cargo-plane=Speed to takeoff and be airborne, no longer colliding with anything (Should be greater than the landing speed)
-
-aircraft-landing-speed-gunship=Speed to land, no longer airborne and has collision with other objects (Should be less than the takeoff speed)
-aircraft-landing-speed-cargo-plane=Speed to land, no longer airborne and has collision with other objects (Should be less than the takeoff speed)
-aircraft-landing-speed-jet=Speed to land, no longer airborne and has collision with other objects (Should be less than the takeoff speed)
-aircraft-landing-speed-flying-fortress=Speed to land, no longer airborne and has collision with other objects (Should be less than the takeoff speed)
-aircraft-landing-speed-better-cargo-plane=Speed to land, no longer airborne and has collision with other objects (Should be less than the takeoff speed)
-aircraft-landing-speed-even-better-cargo-plane=Speed to land, no longer airborne and has collision with other objects (Should be less than the takeoff speed)
+aircraft-takeoff-speed-gunship=Speed to takeoff and be airborne, no longer colliding with anything
+aircraft-takeoff-speed-cargo-plane=Speed to takeoff and be airborne, no longer colliding with anything
+aircraft-takeoff-speed-jet=Speed to takeoff and be airborne, no longer colliding with anything
+aircraft-takeoff-speed-flying-fortress=Speed to takeoff and be airborne, no longer colliding with anything
+aircraft-takeoff-speed-better-cargo-plane=Speed to takeoff and be airborne, no longer colliding with anything
+aircraft-takeoff-speed-even-better-cargo-plane=Speed to takeoff and be airborne, no longer colliding with anything
 
 aircraft-speed-unit=Whether the units are in metric (km/h) or imperial units (mph)
 
