Finalize takeoff distance estimator
- Add documentation for information stored in global table
- If the calculation times out, a short line is drawn to avoid confusing it for
  a valid result
- The calculation runs every half second to reduce performance impact
- The localized name for the LuaShortcut is shorter so it is not cut off
- Minor formatting

--- a/locale/de/config.cfg
+++ b/locale/de/config.cfg
@@ -15,7 +15,7 @@ better-cargo-plane-airborne=Ein bessere fliegende Langstrecken-Truhe.
 even-better-cargo-plane-airborne=Ein noch bessere fliegende Langstrecken-Truhe.
 
 [shortcut-name]
-aircraft-realism-show-takeoff-distance=Startentfernung des Flugzeugs anzeigen
+aircraft-realism-show-takeoff-distance=Startdistanz schätzen
 
 [mod-setting-name]
 aircraft-realism-turn-radius=Realistischer Wenderadius
