--- a/locale/en/config.cfg
+++ b/locale/en/config.cfg
@@ -15,7 +15,7 @@ better-cargo-plane-airborne=A better, longer-range, flying chest.
 even-better-cargo-plane-airborne=An even better, even longer-range flying chest.
 
 [shortcut-name]
-aircraft-realism-show-takeoff-distance=Show aircraft takeoff distance
+aircraft-realism-show-takeoff-distance=Estimate takeoff distance
 
 [mod-setting-name]
 aircraft-realism-turn-radius=Realistic turn radius
