Add option to make airborne aircraft immune to damage (#19)
Accomplished by hooking on_entity_damaged and adding health back when the plane
is damaged

--- a/locale/de/config.cfg
+++ b/locale/de/config.cfg
@@ -30,7 +30,8 @@ aircraft-realism-strict-runway-max-taxi-speed=Strikte maximale Geschwindigkeit f
 aircraft-realism-environmental-impact=Tödliche Zusammenstöße mit der Umwelt.
 aircraft-emit-pollution=Flugzeuge geben Umweltverschmutzung ab
 aircraft-pollution-amount=Menge der abgegebenen Umweltverschmutzung
-aircraft-takeoff-speed-gunship=Kanonenboot Startgeschwindigkeit ---
+aircraft-realism-airborne-damage-immunity=Immunität gegen Luftschaden
+aircraft-takeoff-speed-gunship=Kanonenboot Startgeschwindigkeit
 aircraft-takeoff-speed-cargo-plane=Frachtflugzeug Startgeschwindigkeit
 aircraft-takeoff-speed-jet=Jet Startgeschwindigkeit
 aircraft-takeoff-speed-flying-fortress=Fliegende Festung Startgeschwindigkeit
@@ -55,6 +56,7 @@ aircraft-realism-strict-runway-max-taxi-speed=Die Maximalgeschwindigkeit, mit de
 aircraft-realism-environmental-impact=Aufprall auf Klippen oder Wasser bei über 40 km/h wird das Flugzeug zerstören, anstatt es zu stoppen.
 aircraft-emit-pollution=Flugzeuge geben Umweltverschmutzung ab, wenn sich jemand darin befindet.
 aircraft-pollution-amount=Wieviel Umweltverschmutzung abgegeben wird, wenn jemand darin sitzt, multipliziert mit der Geschwindigkeit und dem Kraftstofftyp des Flugzeugs.
+aircraft-realism-airborne-damage-immunity=Flugzeuge in der Luft erleiden keinen Schaden
 aircraft-takeoff-speed-gunship=Geschwindigkeit zum Abheben, und keine Kollision mehr zu haben
 aircraft-takeoff-speed-cargo-plane=Geschwindigkeit zum Abheben, und keine Kollision mehr zu haben
 aircraft-takeoff-speed-jet=Geschwindigkeit zum Abheben, und keine Kollision mehr zu haben
