--- a/locale/en/config.cfg
+++ b/locale/en/config.cfg
@@ -32,6 +32,7 @@ aircraft-realism-strict-runway-max-taxi-speed=Strict runway max taxi speed
 aircraft-realism-environmental-impact=Deadly environmental impacts
 aircraft-emit-pollution=Planes emit pollution
 aircraft-pollution-amount=Emitted pollution amount
+aircraft-realism-airborne-damage-immunity=Airborne damage immunity
 
 aircraft-takeoff-speed-gunship=Gunship takeoff speed
 aircraft-takeoff-speed-cargo-plane=Cargo plane takeoff speed
@@ -63,6 +64,7 @@ aircraft-realism-strict-runway-max-taxi-speed=The max speed planes can travel at
 aircraft-realism-environmental-impact=Impacts with cliffs and water over 40km/h will destroy the plane instead of stopping it
 aircraft-emit-pollution=Planes emit pollution while someone is sitting in it
 aircraft-pollution-amount=How much pollution to emit while someone is sitting in it, multiplied by the speed and fuel type of the plane
+aircraft-realism-airborne-damage-immunity=Airborne planes take no damage
 
 aircraft-takeoff-speed-gunship=Speed to takeoff and be airborne, no longer colliding with anything
 aircraft-takeoff-speed-cargo-plane=Speed to takeoff and be airborne, no longer colliding with anything
